Changelog
=========

1.2
---

* The save as action now saves to the parent of original image
  instead of to the root of the site.
  [vangheem]

* Clicking the imageeditor tab in IE6/IE7 does not bring up edit dialogs.
  http://plone.org/products/products-imageeditor/issues/4
  [Jeff Kunce]

* Remove unneeded javascript entry in portal_javascripts and updated
  uninstall profile
  [vangheem]

1.2rc3 ~ December 4, 2009
-------------------------
* emergency fix for vocabulary as last fix had a syntax error...
  should have been tested.
  [vangheem]

1.2rc2 ~ December 3, 2009
-------------------------
* fix duplicates when several types have the same content type in
  ImageContentTypeVocabulary, even if they are not installed at the same time
  [Sylvain Boureliou]
* added brazilian translation

1.2rc1
------
* fixed css
* change install profile title

1.2b3
-----
* add user ability to choose image_editor throw portal_memberdata [toutpt]

1.2b2
-----
* add i18n on all actions [toutpt]
* add french translation [toutpt]
* add support for multiple editors [toutpt]
* current editor moved to @@imageeditor.alagimp [toutpt]
* previous editor moved to @@imageeditor.slider [toutpt]

1.2b1
-----
* added permission to edit images
* removed traversable context for editing images--unneeded fanciness
* manual resize now takes zoom into account
* fixed cropping bug
* added grabber

1.1b3
-----
* fixed tests
* only install collective.js.jquery if plone 3.3 or above
* image container, actions and zoom are all in dialog boxes now so it has more of a photoshop feel
* added manual resize dialog to resize action
* now have aspect ratios back!

1.1b2
-----
* added sepia effect
* added save as
* updated styles

1.1b1
-----
* major code revamp
* plugin system for different types of editing actions so anyone can create edit actions
* new interface design
* now News Item images can be edited also
* upgraded to newest version of jquery ui
* added newest version of ImgAreaSelect