@@ -1,0 +1,30 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+	
+    <stylesheet 
+        title       ="" 
+        cacheable   ="True" 
+        compression ="safe" 
+        cookable    ="True"
+        enabled     ="1" 
+        expression  ="python: here.portal_type == 'Image'" 
+        id          ="++resource++jquery.ui.all.css" 
+        media       ="screen"
+        rel         ="stylesheet" 
+        rendering   ="import"
+		remove		="True"
+	/>
+    <stylesheet 
+        title       ="" 
+        cacheable   ="True" 
+        compression ="safe" 
+        cookable    ="True"
+        enabled     ="1" 
+        expression  ="python: here.portal_type == 'Image'" 
+        id          ="++resource++imageeditor-style.css" 
+        media       ="screen"
+        rel         ="stylesheet" 
+        rendering   ="import"
+		remove		="True"
+	/>
+</object>
