@@ -1,0 +1,56 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+
+    <javascript 
+        cacheable   ="True" 
+        compression ="none" 
+        cookable    ="True"
+        enabled     ="True" 
+        expression  ="python: here.portal_type == 'Image' and not portal.portal_membership.isAnonymousUser()" 
+        id          ="++resource++jquery-1.2.6.js" 
+        inline      ="False"
+		remove		="True"
+	/>
+    <javascript 
+        cacheable   ="True" 
+        compression ="none" 
+        cookable    ="True"
+        enabled     ="True" 
+        expression  ="python: here.portal_type == 'Image' and not portal.portal_membership.isAnonymousUser()" 
+        id          ="++resource++jquery-ui-imageeditor.min.js" 
+        inline		="False"
+		remove		="True"
+	/>
+    <javascript 
+        cacheable   ="True" 
+        compression ="none" 
+        cookable    ="True"
+        enabled     ="True" 
+        expression  ="python: here.portal_type == 'Image' and not portal.portal_membership.isAnonymousUser()" 
+        id          ="++resource++jquery.imgareaselect-0.4.2.min.js"
+        inline      ="False"
+		remove		="True"
+	/>
+    <javascript 
+        cacheable   ="True" 
+        compression ="none" 
+        cookable    ="True"
+        enabled     ="True" 
+        expression  ="python: here.portal_type == 'Image' and not portal.portal_membership.isAnonymousUser()" 
+        id          ="++resource++imageeditor.js" 
+        inline      ="False"
+		remove		="True"
+	/>
+
+    <javascript 
+        cacheable   ="True" 
+        compression ="safe" 
+        cookable    ="True"
+        enabled     ="True" 
+        expression  ="python: here.restrictedTraverse('@@image-editor-utility').should_include(request)"
+        id          ="++resource++jquery.imgareaselect-0.8.min.js"
+        inline      ="False"
+		remove		="True"
+	/>
+
+</object>
