@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object name="portal_kss" meta_type="KSS Registry">
+    <kineticstylesheet 
+        cacheable   ="False" 
+        compression ="safe" 
+        cookable    ="True"
+        enabled     ="1" 
+        expression  ="python: here.portal_type =='Image'" 
+        id          ="++resource++imageeditor.kss"
+		remove		="True"
+	/>
+</object>
