@@ -1,0 +1,15 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:gs="http://namespaces.zope.org/genericsetup"
+    i18n_domain="Products.ImageEditor">
+        
+    <gs:upgradeStep
+        title="Upgrade Products.ImageEditor to 1.2"
+        description="Products.ImageEditor upgrade step"
+        source="*"
+        destination="1.2"
+        handler=".upgrades.upgrade_to_1_2"
+        profile="Products.ImageEditor:default"
+	/>
+               
+</configure>
