@@ -23,7 +23,6 @@ Roadmap / Proposal
 
 * Override the Archetype's ImageWidget to add link to the image editor (only in widget edit mode ?)
 * Categorize actions (effects, transformations, colors)
-* Migration from 1.1 to 1.2
 
 Dependencies
 ============
@@ -31,8 +30,14 @@ Dependencies
 * collective.js.jquery
 * collective.js.jqueryui
 
+Suggestions
+===========
+
+This product depends on collective.js.jqueryui which is great, but not always required on every page load. If you'd like to speed up the page loads of other pages that do not need the extra javascript, you can add this condition, `here.restrictedTraverse('@@image-editor-utility').should_include(request)`, to the jqueryui js entry in portal_javascripts.
+
 Contributors
 ============
 * Jean-Michel FRANCOIS
 * Davi Lima
 * Sylvain Boureliou
+* Jeff Kunce
