@@ -3,9 +3,9 @@ import os
 
 setup(name='Products.ImageEditor',
       version='1.2',
-      description="A product that adds an editor tab to ATImage and News Item "
+      description="A product that adds an image editor tab to ATImage and News Item "
                   "so you can rotate, flip, blur, compress, contrast, brightness, "
-                  "sharpen, add drop shadows, crop, resize an image.",
+                  "sharpen, add drop shadows, crop, resize an image, save as, and apply sepia.",
       long_description=open("README.txt").read() + "\n" +
                        open(os.path.join("docs", "HISTORY.txt")).read(),
       # Get more strings from http://www.python.org/pypi?%3Aaction=list_classifiers
@@ -14,7 +14,7 @@ setup(name='Products.ImageEditor',
         "Programming Language :: Python",
         "Topic :: Software Development :: Libraries :: Python Modules",
         ],
-      keywords='plone image rotate flip blur compress contrast brightness '
+      keywords='plone image editor rotate flip blur compress contrast brightness '
                'sharpen drop shadows crop resize save as sepia',
       author='Nathan Van Gheem',
       author_email='vangheem@gmail.com',
